model buttons styled, some work on model selection

--- a/html/merajpt.html
+++ b/html/merajpt.html
@@ -43,11 +43,11 @@
 
 
 
-    <p class="division-text dt_model" id="dt_model"><span> Model </span></p>
+    <p class="division-text dt_m" id="dt_m"><span> Model </span></p>
 
     <div class="model-switch">
-      <button onclick="selectModel('bigram')" class="model-button" id="bigram-button">Bigram</button>
-      <button onclick="selectModel('lstm')" class="model-button" id="lstm-button">LSTM</button>
+      <button onclick="switchModel('bigram')" class="bigram-button" id="bigram-button">Bigram</button>
+      <button onclick="switchModel('lstm')" class="lstm-button" id="lstm-button">LSTM</button>
     </div>
 
 
