code clean up and work on model selection

--- a/html/merajpt.html
+++ b/html/merajpt.html
@@ -56,8 +56,8 @@
     <p class="division-text dt_ds" id="dt_ds"><span> Dataset </span></p>
 
     <div class="dataset-switch">
-      <button onclick="switchDataset('NIZAMI')" class="nizami-button" id="nizami-button">Nizami</button>
-      <button onclick="switchDataset('SHAKESPEARE')" class="shakespeare-button" id="shakespeare-button">Shakespeare</button>
+      <button onclick="switchDataset('nizami')" class="nizami-button" id="nizami-button">Nizami</button>
+      <button onclick="switchDataset('shakespeare')" class="shakespeare-button" id="shakespeare-button">Shakespeare</button>
     </div>
 
     <p class="division-text dt_g" id="dt_g"><span> Generate </span></p>
