--- a/html/merajpt.html
+++ b/html/merajpt.html
@@ -72,7 +72,7 @@
   <script src="/js/common.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
-  <!-- <script src="/js/bigram.js"></script> -->
+  <script src="/js/bigram.js"></script>
   <script src="/js/lstm.js"></script>
 </body>
 </html>
