cv added, code clean up

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <div class="container">
     <h1>Meraj Mammadov</h1>
     <nav class="nav">
-      <a href="#Curriculum Vitae">cv</a>
+      <a href="Meraj_cv.pdf">cv</a>
       <a href="/html/merajpt.html">merajpt</a>
       <a href="#chess">chess</a>
-      <a href="#contact">contact</a>
+      <a href="/html/contact.html">contact</a>
 
       <div class="darkmode-container">
         <input type="checkbox" id="dark-mode-toggle"/>
