work on the contacts page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </p>
         <p>
           Currently, I am working in Autonomous Systems Laboratory (ASL) with
-          the group of Professor Hyondong Oh. Prior to this, I worked in the 
+          the group of Professor Hyondong Oh. Prior to this, I had a chance to work in the 
           Innovative Thermodynamics Laboratory (ITEL) with Professor Jaeseon Lee.
         </p>
         <p>
@@ -62,7 +62,7 @@
         <p>
           I am currently working on reinforcement learning and its applications
           on robot autonomy.  I have a broad interest in various topics, so please
-          feel free to reach out for potential projects and collaborations!
+          feel free to reach out for potential projects or collaborations!
         </p>
       </div>
       <img src="/img/image.jpeg" alt="Meraj Mammadov" class="profile-picture" />
