contact animation dark mode

--- a/html/contact.html
+++ b/html/contact.html
@@ -55,7 +55,7 @@
         Please use the following channels to get in touch:
       </section>
 
-      <section class="animation">
+      <section class="animation" id="dark-animation">
         <script
           src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
           type="module"
@@ -65,7 +65,23 @@
           src="https://lottie.host/7656dc4c-aa54-406f-8b8c-7213eba5ee42/tEP5Lw0tMt.json"
           background="transparent"
           speed="1"
-          style="width: 200px; height: 200px"
+          style="width: 300px; height: 300px"
+          loop
+          autoplay
+        ></dotlottie-player>
+
+    </section>
+    <section class="animation" id="white-animation">
+        <script
+          src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+          type="module"
+        ></script>
+
+        <dotlottie-player
+          src="https://lottie.host/5cec983a-f7cb-413c-b178-7168ad77e070/TyDvTnP3g0.json"
+          background="transparent"
+          speed="1"
+          style="width: 300px; height: 300px"
           loop
           autoplay
         ></dotlottie-player>
