--- a/html/404.html
+++ b/html/404.html
@@ -1,44 +1,85 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHRFYB71LZ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-ZHRFYB71LZ');
-  </script>
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-ZHRFYB71LZ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-ZHRFYB71LZ");
+    </script>
 
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Meraj Mammadov</title>
-  <link rel="favicon" type="image/x-icon" href="img/favicon.ico" />
-  <link rel="stylesheet" href="css/skeleton.css" />
-  <link rel="stylesheet" href="css/styles.css" />
-  <script src="js/scripts.js" defer></script>
-  <link
-    href="https://fonts.googleapis.com/css?family=Lato:400,700"
-    rel="stylesheet"
-    type="text/css"
-  />
-</head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Meraj Mammadov</title>
+    <link rel="favicon" type="image/x-icon" href="/img/favicon.ico" />
+    <link rel="stylesheet" href="/css/skeleton.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <script src="/js/common.js" defer></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:400,700"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
 
-<body>
-  <div class="container">
-    <h1>Meraj Mammadov</h1>
-    <nav class="nav">
-      <a href="#Curriculum Vitae">cv</a>
-      <a href="html/merajpt.html">merajpt</a>
-      <a href="#chess">chess</a>
-      <a href="#contact">contact</a>
+  <body>
+    <div class="container" id="container">
+      <h1><a href="/index.html">Meraj Mammadov</a></h1>
+      <nav class="nav">
+        <a href="/Meraj_cv.pdf">cv</a>
+        <a href="/html/merajpt.html">merajpt</a>
+        <a href="#chess">chess</a>
+        <a href="/html/contact.html">contact</a>
 
-      <div class="darkmode-container">
-        <input type="checkbox" id="dark-mode-toggle"/>
-        <label for="dark-mode-toggle">
-        </label>
-      </div>
-    </nav>
-  </div>
-</body>
-</html> -->
+        <div class="darkmode-container">
+          <input type="checkbox" id="dark-mode-toggle" />
+          <label for="dark-mode-toggle"> </label>
+        </div>
+      </nav>
+
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      />
+
+      <section class="animation error" id="dark-animation">
+        <script
+          src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+          type="module"
+        ></script>
+
+        <dotlottie-player
+          src="https://lottie.host/20cfab54-eda1-41f8-80da-983a5e401cb5/hxWo9EsI9B.json"
+          background="transparent"
+          speed="1"
+          style="width: 300px; height: 300px"
+          loop
+          autoplay
+        ></dotlottie-player>
+      </section>
+
+      <section class="animation error" id="white-animation">
+        <script
+          src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+          type="module"
+        ></script>
+
+        <dotlottie-player
+          src="https://lottie.host/c6d25603-ae69-42eb-9d0e-a91ba5109495/lhYwK8MBmZ.json"
+          background="transparent"
+          speed="1"
+          style="width: 300px; height: 300px"
+          loop
+          autoplay
+        ></dotlottie-player>
+      </section>
+    </div>
+  </body>
+</html>
