fixed the hrefs

--- a/html/merajpt.html
+++ b/html/merajpt.html
@@ -25,13 +25,13 @@
 </head>
 
 <body>
-  <div class="container">
-    <h1>Meraj Mammadov</h1>
+  <div class="container" id="container">
+    <h1><a href="/index.html">Meraj Mammadov</a></h1>
     <nav class="nav">
-      <a href="/index.html">cv</a>
+      <a href="/Meraj_cv.pdf">cv</a>
       <a href="/html/merajpt.html">merajpt</a>
       <a href="/index.html">chess</a>
-      <a href="/index.html">contact</a>
+      <a href="/html/contact.html">contact</a>
 
       <div class="darkmode-container">
         <input type="checkbox" id="dark-mode-toggle"/>
