--- a/html/contact.html
+++ b/html/contact.html
@@ -49,7 +49,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
       />
 
-      <section class="about-me contactme">
+      <section class="content">
         Whether you are interested in potential collaborations, have questions
         about my work, or simply wish to connect, I would love to hear from you.
         Please use the following channels to get in touch:
@@ -86,7 +86,7 @@
         ></dotlottie-player>
       </section>
 
-      <section class="contact" id="contact">
+      <section class="content contact" id="contact">
         <a href="https://www.github.com/meraccos"
           ><i class="fa fa-github" style="font-size: 32px"></i
         ></a>
