--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
       </nav>
 
-      <section class="about-me">
+      <section class="content">
         <div class="profile-description">
           <p>
             I am a first year Master's student of Mechanical Engineering at
