--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <a href="/Meraj_cv.pdf">cv</a>
         <a href="/html/merajpt.html">merajpt</a>
         <a href="#chess">chess</a>
+        <a href="#chess">enigma</a>
         <a href="/html/contact.html">contact</a>
 
         <div class="darkmode-container">
