enigma intro added

--- a/html/q.html
+++ b/html/q.html
@@ -50,51 +50,10 @@
       />
 
       <section class="content">
-        Whether you are interested in potential collaborations, have questions
-        about my work, or simply wish to connect, I would love to hear from you.
-        Please use the following channels to get in touch:
-      </section>
-
-      <section class="animation" id="dark-animation">
-        <script
-          src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
-          type="module"
-        ></script>
-
-        <dotlottie-player
-          src="https://lottie.host/7656dc4c-aa54-406f-8b8c-7213eba5ee42/tEP5Lw0tMt.json"
-          background="transparent"
-          speed="1"
-          style="width: 300px; height: 300px"
-          loop
-          autoplay
-        ></dotlottie-player>
-      </section>
-      <section class="animation" id="white-animation">
-        <script
-          src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
-          type="module"
-        ></script>
-
-        <dotlottie-player
-          src="https://lottie.host/d2ad4f05-f866-4ea8-99ba-a288dccd74af/RJVQTO3S5M.json"
-          background="transparent"
-          speed="1"
-          style="width: 300px; height: 300px"
-          loop
-          autoplay
-        ></dotlottie-player>
-      </section>
-
-      <section class="content contact" id="contact">
-        <a href="https://www.github.com/meraccos"
-          ><i class="fa fa-github" style="font-size: 32px"></i
-        ></a>
-        <a href="https://www.linkedin.com/in/meraccos"
-          ><i class="fa fa-linkedin" style="font-size: 32px"></i
-        ></a>
-        <i class="fa fa-envelope" style="font-size: 32px"></i>
-        <p>gmail: meraccos</p>
+        Here I challenge you to solve some interesting problems that I have
+        encountered, or thought of throughtout years. Note that while selecting the problems, I
+        have focused more on how interesting the problem is and how enjoyable
+        the solution process is, rather than the hardness of them.
       </section>
     </div>
   </body>
