text align center

--- a/html/contact.html
+++ b/html/contact.html
@@ -50,9 +50,11 @@
       />
 
       <section class="content">
-        Whether you are interested in potential collaborations, have questions
-        about my work, or simply wish to connect, I would love to hear from you.
-        Please use the following channels to get in touch:
+        <p>
+          Whether you are interested in potential collaborations, have questions
+          about my work, or simply wish to connect, I would love to hear from
+          you. Please use the following channels to get in touch:
+        </p>
       </section>
 
       <section class="animation" id="dark-animation">
