--- a/html/q.html
+++ b/html/q.html
@@ -50,10 +50,13 @@
       />
 
       <section class="content">
-        Here I challenge you to solve some interesting problems that I have
-        encountered, or thought of throughtout years. Note that while selecting the problems, I
-        have focused more on how interesting the problem is and how enjoyable
-        the solution process is, rather than the hardness of them.
+        <p>
+          Here I challenge you to solve some interesting problems that I have
+          encountered, or thought of throughtout years. Note that while
+          selecting the problems, I have focused more on how interesting the
+          problem is and how enjoyable the solution process is, rather than the
+          hardness of them.
+        </p>
       </section>
     </div>
   </body>
