added first two enigma problems

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -35,7 +35,7 @@
       <nav class="nav">
         <a href="/Meraj_cv.pdf">cv</a>
         <a href="/html/merajpt.html">merajpt</a>
-        <a href="/html/q.html">enigma</a>
+        <a href="/html/enigma.html">enigma</a>
         <a href="/html/contact.html">contact</a>
 
         <div class="darkmode-container">
@@ -49,15 +49,37 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
       />
 
-      <section class="content">
-        <p>
-          Here I challenge you to solve some interesting problems that I have
-          encountered, or thought of throughtout years. Note that while
-          selecting the problems, I have focused more on how interesting the
-          problem is and how enjoyable the solution process is, rather than the
-          hardness of them.
-        </p>
-      </section>
+      <p class="content">
+        Here I challenge you to solve some interesting math and physics related
+        problems that I have encountered, or thought of throughtout years. Note
+        that while selecting the problems, I have focused more on how
+        interesting the problem is and how enjoyable the solution process is,
+        rather than the hardness of them.
+      </p>
+
+      <p class="dt" id="dt"><span> Problems </span></p>
+
+      <!-- <p class="content problem">
+        1. Find the surface area and the volume of an n dimensional sphere. 
+      </p> -->
+
+      <ol class="content problem">
+        <li>
+          Find the surface area and the volume of an n dimensional sphere. 
+        </li>
+        <li>
+          Find the degrees of freedom an n-sided polygon has.
+        </li>
+      </ol>
+
+      <!-- <p class="content problem">
+        2. Find the degrees of freedom an n-sided polygon has.
+      </p>
+  
+      <p class="content problem">
+        3. A ballistic rocket is to be thrown to a target psi radian below the origin. What is the minimal speed that the ball can be thrown to reach the target?
+      </p> -->
+
     </div>
   </body>
 </html>
