--- a/html/merajpt.html
+++ b/html/merajpt.html
@@ -30,7 +30,7 @@
     <nav class="nav">
       <a href="/Meraj_cv.pdf">cv</a>
       <a href="/html/merajpt.html">merajpt</a>
-      <a href="/html/q.html">enigma</a>
+      <a href="/html/enigma.html">enigma</a>
       <a href="/html/contact.html">contact</a>
 
       <div class="darkmode-container">
