--- a/html/404.html
+++ b/html/404.html
@@ -35,7 +35,7 @@
       <nav class="nav">
         <a href="/Meraj_cv.pdf">cv</a>
         <a href="/html/merajpt.html">merajpt</a>
-        <a href="#chess">chess</a>
+        <a href="/html/enigma.html">chess</a>
         <a href="/html/contact.html">contact</a>
 
         <div class="darkmode-container">
