third problem added

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -22,6 +22,10 @@
     <link rel="stylesheet" href="/css/skeleton.css" />
     <link rel="stylesheet" href="/css/styles.css" />
     <script src="/js/common.js" defer></script>
+    <script
+      type="text/javascript"
+      src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+    ></script>
     <link
       href="https://fonts.googleapis.com/css?family=Lato:400,700"
       rel="stylesheet"
@@ -65,21 +69,18 @@
 
       <ol class="content problem">
         <li>
-          Find the surface area and the volume of an n dimensional sphere.   
+          Find the surface area and the volume of an n dimensional sphere.
         </li>
-        <br>
+        <br />
+        <li>Find the degrees of freedom an n-sided polygon has.</li>
+        <br />
         <li>
-          Find the degrees of freedom an n-sided polygon has.
+          A ballistic missile is launched from the north pole, the target is at
+          the latitude \(\phi \) (>0, if northern hemisphere, <0 otherwise). At
+          which angle (with respect to the horizon) the missile needs to be
+          launched in order to have minimal launch velocity of the missile?
         </li>
       </ol>
-
-      <!-- <p class="content problem">
-        2. Find the degrees of freedom an n-sided polygon has.
-      </p>
-  
-      <p class="content problem">
-        3. A ballistic rocket is to be thrown to a target psi radian below the origin. What is the minimal speed that the ball can be thrown to reach the target?
-      </p> -->
 
     </div>
   </body>
