--- a/html/enigma.html
+++ b/html/enigma.html
@@ -76,12 +76,17 @@
         <br />
         <li>
           A ballistic missile is launched from the north pole, the target is at
-          the latitude \(\phi \) (>0, if northern hemisphere, <0 otherwise). At
-          which angle (with respect to the horizon) the missile needs to be
+          the latitude \(\phi \) (>0, if northern hemisphere, &lt0 otherwise).
+          At which angle (with respect to the horizon) the missile needs to be
           launched in order to have minimal launch velocity of the missile?
         </li>
+        <li>
+          Imagine two identical objects with heat capacity \(C \) and
+          temperatures \(T_1 \) and \(T_2 \). If we were to build an engine out
+          of these two objects, what is the maximum work that this engine can
+          do?
+        </li>
       </ol>
-
     </div>
   </body>
 </html>
