--- a/html/enigma.html
+++ b/html/enigma.html
@@ -72,7 +72,7 @@
           Find the surface area and the volume of an n dimensional sphere.
         </li>
         <br />
-        <li>Find the degrees of freedom an n-sided polygon has.</li>
+        <li>Find the number of degrees of freedom an n-sided polygon has.</li>
         <br />
         <li>
           A ballistic missile is launched from the north pole, the target is at
@@ -80,6 +80,7 @@
           At which angle (with respect to the horizon) the missile needs to be
           launched in order to have minimal launch velocity of the missile?
         </li>
+        <br />
         <li>
           Imagine two identical objects with heat capacity \(C \) and
           temperatures \(T_1 \) and \(T_2 \). If we were to build an engine out
