--- a/html/enigma.html
+++ b/html/enigma.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <script src="/js/common.js" defer></script>
     <script
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
       type="text/javascript"
-      src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
     ></script>
     <link
       href="https://fonts.googleapis.com/css?family=Lato:400,700"
