references and problem 6 added

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -72,27 +72,38 @@
           Find the surface area and the volume of an n dimensional sphere.
         </li>
         <br />
-        <li>Find the number of degrees of freedom an n-sided polygon has.</li>
+        <li>How many degrees of freedom does an n-sided polygon have?</li>
+        <br />
+        <li>
+          Imagine two identical objects with heat capacity \(C\) and
+          temperatures \(T_1\) and \(T_2\). If we were to build an engine out of
+          these two objects, what is the maximum work that this engine can do?
+          \(^1\)
+        </li>
         <br />
         <li>
           A ballistic missile is launched from the north pole, the target is at
-          the latitude \(\phi \) (>0, if northern hemisphere, &lt0 otherwise).
-          At which angle (with respect to the horizon) the missile needs to be
+          the latitude \(\phi\) (>0, if northern hemisphere, &lt0 otherwise). At
+          which angle (with respect to the horizon) the missile needs to be
           launched in order to have minimal launch velocity of the missile?
+          \(^2\)
         </li>
         <br />
         <li>
-          Imagine two identical objects with heat capacity \(C \) and
-          temperatures \(T_1 \) and \(T_2 \). If we were to build an engine out
-          of these two objects, what is the maximum work that this engine can
-          do?
+          Imagine a homogenous, liquid planet of average radius \(R \) and
+          density \(\rho \), spinning around itself with an angular velocity of
+          \(w.\) Find its eccentricity.
         </li>
         <br />
         <li>
-          Imagine a homogenous, liquid planet of average radius \(R \) and density \(\rho \), spinning around itself with an angular
-          velocity of \(w \). Find its eccentricity.
+          Imagine a water sprinkler in the garden, sprinkling water uniformly at
+          each angle and in all directions at the same time. What radius from
+          the origin would get watered the most?
         </li>
+        <br />
+        <br />
       </ol>
+      References: \(^1\)Nahid Mammadov, \(^2\)Jaan Kalda
     </div>
   </body>
 </html>
