7th problem added

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -91,8 +91,14 @@
         <br />
         <li>
           Imagine a homogenous, liquid planet of average radius \(R \) and
-          density \(\rho \), spinning around itself with an angular velocity of
+          density \(\rho\), spinning around itself with an angular velocity of
           \(w.\) Find its eccentricity.
+        </li>
+        <br />
+        <li>
+          A point particle of mass \(m\) and charge \(q\) is moving under a
+          horizontal, homogenous magnetic field of induction \(B\). Find its
+          trajectory.\(^1\)
         </li>
         <br />
         <li>
@@ -100,9 +106,9 @@
           each angle and in all directions at the same time. What radius from
           the origin would get watered the most?
         </li>
-        <br />
-        <br />
       </ol>
+      <br />
+      <br />
       References: \(^1\)Nahid Mammadov, \(^2\)Jaan Kalda
     </div>
   </body>
