added more problems

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -82,6 +82,11 @@
         </li>
         <br />
         <li>
+          Give the shape (as a function) of a planet that maximizes the
+          gravitational force acting on a person standing on it.
+        </li>
+        <br />
+        <li>
           A ballistic missile is launched from the north pole, the target is at
           the latitude \(\phi\) (>0, if northern hemisphere, &lt0 otherwise). At
           which angle (with respect to the horizon) the missile needs to be
@@ -105,6 +110,19 @@
           Imagine a water sprinkler in the garden, sprinkling water uniformly at
           each angle and in all directions at the same time. What radius from
           the origin would get watered the most?
+        </li>
+        <br />
+        <li>
+          Consider a particle undergoing a one-dimensional random walk, taking
+          steps of length \(a\) to the right or left with equal probability.
+          What is the probability distribution of the particle's position after
+          \(n\) steps?
+        </li>
+        <br />
+        <li>
+          Consider a particle undergoing an \(n\)-dimensional random walk,
+          taking steps in each direction with equal probability. What is the
+          probability that the particle will come back to the origin?
         </li>
       </ol>
       <br />
