--- a/html/enigma.html
+++ b/html/enigma.html
@@ -85,7 +85,7 @@
         <br />
         <li>
           A ballistic missile is launched from the north pole, the target is at
-          the latitude \(\phi\) (>0, if northern hemisphere, &lt0 otherwise). At
+          the latitude \(\phi\). At
           which angle (with respect to the horizon) the missile needs to be
           launched in order to have minimal launch velocity of the missile?
           \(^2\)
