added description and some formatting

--- a/html/contact.html
+++ b/html/contact.html
@@ -48,7 +48,7 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
       />
-
+      <br />
       <section class="content">
         <p>
           Whether you are interested in potential collaborations, have questions
@@ -88,7 +88,7 @@
         ></dotlottie-player>
       </section>
 
-      <section class="content contact" id="contact">
+      <section class="content contact profile" id="contact">
         <a href="https://www.github.com/meraccos"
           ><i class="fa fa-github" style="font-size: 32px"></i
         ></a>
