--- a/html/enigma.html
+++ b/html/enigma.html
@@ -66,7 +66,7 @@
 
       <ol class="content problem">
         <li>
-          Find the surface area and the volume of an n dimensional sphere.
+          Find the surface area and the volume of an n-dimensional sphere.
         </li>
         <br />
         <li>How many degrees of freedom does an n-sided polygon have?</li>
@@ -74,21 +74,19 @@
         <li>
           Imagine two identical objects with heat capacity \(C\) and
           temperatures \(T_1\) and \(T_2\). If we were to build an engine out of
-          these two objects, what is the maximum work that this engine can do?
-          \(^1\)
+          them, what is the maximum work that this engine can do? \(^1\)
         </li>
         <br />
         <li>
-          Give the shape (as a function) of a planet that maximizes the
-          gravitational force acting on a person standing on it.
+          Give the shape of a fixed-volume planet (in mathematical form) that
+          maximizes the gravitational force acting on a person standing on it.
         </li>
         <br />
         <li>
           A ballistic missile is launched from the north pole, the target is at
-          the latitude \(\phi\). At
-          which angle (with respect to the horizon) the missile needs to be
-          launched in order to have minimal launch velocity of the missile?
-          \(^2\)
+          the latitude \(\phi\). To have the minimal launch velocity of the
+          missile, at which angle (with respect to the horizon) do we need to
+          launch it? \(^2\)
         </li>
         <br />
         <li>
@@ -99,8 +97,9 @@
         <br />
         <li>
           A point particle of mass \(m\) and charge \(q\) is moving under a
-          horizontal, homogenous magnetic field of induction \(B\). Find its
-          trajectory.\(^1\)
+          homogenous, perpendicularly-directed magnetic field of induction \(B\)
+          and electrical field of intensity E. Ignoring gravity and relativity,
+          find its trajectory.\(^1\)
         </li>
         <br />
         <li>
