--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
       </nav>
 
-      <section class="content">
+      <section class="content profile">
         <div class="profile-description">
           <p>
             I am a first year Master's student of Mechanical Engineering at
@@ -79,16 +79,6 @@
           class="profile-picture"
         />
       </section>
-
-      <!-- 
-    <section class="projects">
-      <h2>Projects</h2>
-      <div class="project">
-        <h3> To be added...</h3>
-        <h3> A very interesting project</h3>
-        <p>Description of a very interesting project will be here.</p>
-      </div>
-    </section> -->
     </div>
   </body>
 </html>
